added a full item classification system and texture overriding based on specific melon king items